--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,19 @@
     transform: rotate(360deg);
   }
 }
+
+.pokemon__container{
+  border :1px solid gray;
+  display : flex;
+  flex-direction: column;
+}
+ul{
+  list-style:none;
+
+  
+}
+.cards__container{
+  display: grid;
+  grid-template-columns: 150px 150px 150px 150px 150px;
+  
+}
