--- a/src/App.css
+++ b/src/App.css
@@ -55,3 +55,14 @@ ul{
 
 
 }
+.types{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  padding-left:0px;
+  align-items: center;
+  margin-bottom: 10px;
+}
+.badge{
+  margin: 0px 5px;
+}
